国际化基本配置   登录界面优化

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,12 @@
 {
   "login": {
-    "login": "login",
+    "login": "Login",
     "userName": "userName",
-    "password": "password"
+    "password": "password",
+    "userNamePlaceholder": "Please enter the username",
+    "passwordPlaceholder": "Please enter the password",
+    "userNameError": "Please enter the username",
+    "passwordError": "Please enter the password",
+    "remember": "Remember me"
   }
 }
