后台/登录接口联调

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -5,8 +5,10 @@
     "password": "密码",
     "userNamePlaceholder": "请输入用户名",
     "passwordPlaceholder": "请输入密码",
+    "captchaPlaceholder": "验证码",
     "userNameError": "请输入您的账号！",
     "passwordError": "请输入您的密码！",
+    "captchaError": "请输入验证码",
     "remember": "保持会话"
   }
 }
