--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,8 +5,10 @@
     "password": "password",
     "userNamePlaceholder": "Please enter the username",
     "passwordPlaceholder": "Please enter the password",
+    "captchaPlaceholder": "Captcha",
     "userNameError": "Please enter the username",
     "passwordError": "Please enter the password",
+    "captchaError": "Please enter the captcha",
     "remember": "Remember me"
   }
 }
