--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,26 +1,43 @@
 {
   "message": {
     "success": "成功！",
+    "fail": "异常！",
     "error": "错误！",
     "loading": "加载中...",
     "noData": "暂无数据！",
     "noMoreData": "没有更多数据了！",
     "noMore": "没有更多了！"
   },
+  "placeholder": {
+    "userName": "请输入用户名",
+    "password": "请输入密码",
+    "captcha": "验证码"
+  },
+  "error": {
+    "userName": "用户名不能为空！",
+    "password": "密码不能为空！",
+    "captcha": "验证码不能为空！",
+    "captchaError": "验证码错误！",
+    "userNameError": "用户名错误！",
+    "passwordError": "密码错误！",
+    "login": "登录失败！"
+  },
+  "success": {
+    "login": "登录成功！",
+    "loginOut": "退出成功！"
+  },
+  "content": {
+    "loginOut": "确定要退出登录吗？"
+  },
+  "title": {
+    "login": "登 录",
+    "loginOutTitle": "退出登录"
+  },
   "login": {
     "login": "登 录",
     "userName": "用户名",
     "password": "密码",
     "captcha": "验证码",
-    "userNamePlaceholder": "请输入用户名",
-    "passwordPlaceholder": "请输入密码",
-    "captchaPlaceholder": "验证码",
-    "userNameError": "请输入您的账号！",
-    "passwordError": "请输入您的密码！",
-    "captchaError": "请输入验证码",
-    "remember": "保持会话",
-    "success": "登录成功！",
-    "fail": "登录失败！",
-    "captchaFail": "验证码错误！"
+    "remember": "保持会话"
   }
 }
