--- a/src/locales/en/user.json
+++ b/src/locales/en/user.json
@@ -4,7 +4,7 @@
       "number": "Number",
       "username": "Username",
       "nickName": "Nickname",
-      "group": "Group",
+      "roles": "Roles",
       "avatar": "Avatar",
       "gender": "Gender",
       "email": "Email",
