--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -14,6 +14,17 @@
       "status": "状态",
       "createTime": "创建时间",
       "operation": "操作"
+    },
+    "rows": {
+      "gender": {
+        "0": "保密",
+        "1": "男",
+        "2": "女"
+      },
+      "status": {
+        "0": "禁用",
+        "1": "启用"
+      }
     }
   }
 }
