--- a/src/locales/zh/default.json
+++ b/src/locales/zh/default.json
@@ -14,7 +14,8 @@
     "userName": "请输入用户名",
     "password": "请输入密码",
     "captcha": "验证码",
-    "keyword": "请输入关键字"
+    "keyword": "请输入关键字",
+    "role": "请选择角色"
   },
   "error": {
     "userName": "用户名不能为空！",
