--- a/src/locales/zh/default.json
+++ b/src/locales/zh/default.json
@@ -17,6 +17,15 @@
     "keyword": "请输入关键字",
     "role": "请选择角色"
   },
+  "success": {
+    "login": "登录成功！",
+    "loginOut": "退出成功！",
+    "welcome": "欢迎回来！",
+    "upload": "上传成功！",
+    "delete": "删除成功！",
+    "create": "创建成功！",
+    "update": "修改成功！"
+  },
   "error": {
     "userName": "用户名不能为空！",
     "password": "密码不能为空！",
@@ -26,12 +35,10 @@
     "passwordError": "密码错误！",
     "login": "登录失败！",
     "network": "网络异常，请稍后重试！",
-    "server": "服务器异常，请稍后重试！"
-  },
-  "success": {
-    "login": "登录成功！",
-    "loginOut": "退出成功！",
-    "welcome": "欢迎回来！"
+    "server": "服务器异常，请稍后重试！",
+    "upload": "上传失败，请稍后重试！",
+    "uploadSize": "上传文件大小不能超过 ",
+    "uploadType": "上传文件类型不正确！"
   },
   "content": {
     "loginOut": "确定要退出登录吗？"
@@ -50,5 +57,9 @@
     "password": "密码",
     "captcha": "验证码",
     "remember": "保持会话"
+  },
+  "button": {
+    "confirm": "确定",
+    "cancel": "取消"
   }
 }
