--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -22,7 +22,7 @@
     "loginExpired": "Login expired, please login again"
   },
   "placeholder": {
-    "userName": "Please input the username",
+    "username": "Please input the username",
     "password": "Please input the password",
     "captcha": "Please input the captcha",
     "keyword": "Please input the keyword",
@@ -41,21 +41,28 @@
     "update": "Update success!"
   },
   "error": {
-    "userName": "Please enter the username",
-    "password": "Please enter the password",
-    "captcha": "Please enter the captcha",
+    "userName": "Please input the username",
+    "password": "Please input the password",
+    "nickname": "Please input the nickname",
+    "captcha": "Please input the captcha",
     "login": "Login failed, please try again later",
     "network": "Network error, please try again later",
     "server": "Server error, please try again later",
     "upload": "Upload failed, please try again later",
     "uploadSize": "The uploaded file cannot exceed ",
-    "uploadType": "The uploaded file type is incorrect"
+    "uploadType": "The uploaded file type is incorrect",
+    "roles": "Please select the roles"
   },
   "title": {
     "refresh": "Refresh",
     "filter": "Filter",
     "expand": "Expand",
-    "expandUniversalSearch": "Expand universal search"
+    "expandUniversalSearch": "Expand universal search",
+    "create": "Create",
+    "update": "Update",
+    "delete": "Delete",
+    "remove": "Remove",
+    "remove_selected_row": "Remove selected rows"
   },
   "login": {
     "login": "Login",
