--- a/src/locales/zh/default.json
+++ b/src/locales/zh/default.json
@@ -11,11 +11,13 @@
     "loginExpired": "登录已过期，请重新登录！"
   },
   "placeholder": {
-    "userName": "请输入用户名",
+    "username": "请输入用户名",
     "password": "请输入密码",
+    "nickname": "请输入昵称",
     "captcha": "验证码",
     "keyword": "请输入关键字",
-    "role": "请选择角色"
+    "role": "请选择角色",
+    "roles": "请选择角色组"
   },
   "success": {
     "login": "登录成功！",
@@ -29,6 +31,7 @@
   "error": {
     "userName": "用户名不能为空！",
     "password": "密码不能为空！",
+    "nickname": "昵称不能为空！",
     "captcha": "验证码不能为空！",
     "captchaError": "验证码错误！",
     "userNameError": "用户名错误！",
@@ -38,7 +41,8 @@
     "server": "服务器异常，请稍后重试！",
     "upload": "上传失败，请稍后重试！",
     "uploadSize": "上传文件大小不能超过 ",
-    "uploadType": "上传文件类型不正确！"
+    "uploadType": "上传文件类型不正确！",
+    "roles": "请选择角色组"
   },
   "content": {
     "loginOut": "确定要退出登录吗？"
@@ -49,7 +53,12 @@
     "refresh": "刷新",
     "filter": "筛选",
     "expand": "展开",
-    "expandUniversalSearch": "展开通用搜索"
+    "expandUniversalSearch": "展开通用搜索",
+    "create": "新增",
+    "update": "编辑",
+    "delete": "删除",
+    "remove": "消除",
+    "remove_selected_row": "删除选中行"
   },
   "login": {
     "login": "登 录",
