优化 1. 将角色组管理列表接口调用重构到store 2. 将菜单规则管理列表接口调用重构到store 3. 将管理员列表接口调用重构到store 4. 将管理员日志列表接口调用重构到store

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -73,5 +73,11 @@
   "button": {
     "confirm": "Confirm",
     "cancel": "Cancel"
+  },
+  "enum": {
+    "status": {
+      "0": "Disable",
+      "1": "Enable"
+    }
   }
 }
