--- a/src/locales/zh/default.json
+++ b/src/locales/zh/default.json
@@ -70,5 +70,11 @@
   "button": {
     "confirm": "确定",
     "cancel": "取消"
+  },
+  "enum": {
+    "status": {
+      "0": "禁用",
+      "1": "启用"
+    }
   }
 }
