新增   01 定义TableSettings类 前端传统表格crud

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -62,6 +62,7 @@
     "update": "Update",
     "delete": "Delete",
     "remove": "Remove",
+    "detail": "Detail",
     "remove_selected_row": "Remove selected rows"
   },
   "login": {
