--- a/src/locales/zh/default.json
+++ b/src/locales/zh/default.json
@@ -58,6 +58,7 @@
     "update": "编辑",
     "delete": "删除",
     "remove": "消除",
+    "detail": "查看详情",
     "remove_selected_row": "删除选中行"
   },
   "login": {
