修复一些已知问题 新增   01 表单根据 sort 字段排序

--- a/src/locales/en/admin_role.json
+++ b/src/locales/en/admin_role.json
@@ -1,12 +1,14 @@
 {
   "table": {
-    "columns": {}
+    "columns": {
+    }
   },
   "form": {
     "label": {
       "name": "Name"
     },
     "placeholder": {
+      "parentId": "Please select parent",
       "name": "Please input the name"
     }
   },
