修复一些已知问题 新增   01 表单根据 sort 字段排序   02 自定义配置表单项减少代码重构

--- a/src/locales/zh/admin_permission.json
+++ b/src/locales/zh/admin_permission.json
@@ -5,7 +5,8 @@
   },
   "form": {
     "label": {
-      "name": "组别名称"
+      "title": "规则标题",
+      "type": "规则类型"
     },
     "placeholder": {
       "parentId": "请选择上级分组",
