01 class类型优化 02 升级 vue版本到 3.4 03 新增 useFormInstance hook 04 优化表单展示

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -63,7 +63,8 @@
     "delete": "Delete",
     "remove": "Remove",
     "detail": "Detail",
-    "remove_selected_row": "Remove selected rows"
+    "remove_selected_row": "Remove selected rows",
+    "loading": "Loading..."
   },
   "login": {
     "login": "Login",
