--- a/src/locales/zh/default.json
+++ b/src/locales/zh/default.json
@@ -53,6 +53,9 @@
     "refresh": "刷新",
     "filter": "筛选",
     "expand": "展开",
+    "collapse": "收起",
+    "expandAll": "展开全部子菜单",
+    "collapseAll": "收起全部子菜单",
     "expandUniversalSearch": "展开通用搜索",
     "create": "新增",
     "update": "编辑",
