refactor: 重构 将 refresh 移动到 CustomTable 内 refactor: ant-btn-reload -> ant-btn-refresh 将reload替换为refresh refactor: 重构 i-popconfirm 以及 i-tooltip内的继承实现

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -67,7 +67,9 @@
     "remove": "Remove",
     "detail": "Detail",
     "remove_selected_row": "Remove selected rows",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "cancel": "Cancel",
+    "confirm": "Confirm"
   },
   "login": {
     "login": "Login",
