--- a/src/locales/en/admin_log.json
+++ b/src/locales/en/admin_log.json
@@ -1,6 +1,18 @@
 {
   "table": {
     "columns": {
+      "userId": "User ID",
+      "username": "Username",
+      "title": "Title",
+      "url": "Url",
+      "ip": "IP",
+      "method": "Method",
+      "userAgent": "User-Agent",
+      "createTime": "CreateTime",
+      "status": "Status",
+      "responseTime": "ResponseTime",
+      "params": "Params",
+      "operation": "Operation"
     }
   },
   "detail": {
